# exergon

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE.original.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  serve-ui.sh
.claude/agents/: bevy-reviewer.md  content-designer.md  docs-curator.md  market-researcher.md  narrative-designer.md  playtest-verifier.md  project-manager.md
assets/biomes/: deep.ron  default.ron
assets/deposits/: aluminum.ron  coal.ron  cryophase_deposit.ron  derelict_ship.ron  fluxite_relic_cache.ron  iron_copper.ron  tin.ron  tin_nickel.ron  titanium.ron  xalite.ron
assets/form_groups/: alloy.ron  exotic.ron  metal.ron
assets/items/: analysis_station.ron  analysis_station_core.ron  assembler.ron  assembler_core.ron  assembler_kit.ron  bronze_gear.ron  carbothermal_bed.ron  circuit_board.ron  coal.ron  construction_filler.ron  coolant_runoff.ron  copper_ingot.ron  copper_ore.ron  copper_wire.ron  crushed_stone.ron  cryogenic_bed.ron  energy_io.ron  exotic_fuel.ron  exotic_solvent.ron  field_sample.ron  fluxite_coil.ron  fluxite_lattice.ron  gateway.ron  gateway_core.ron  gateway_key.ron  generator.ron  generator_kit.ron  gravel.ron  iron_ingot.ron  iron_ore.ron  logistics_cable.ron  logistics_io.ron  machine_casing.ron  metal_scrap.ron  miner_kit.ron  nickel_ore.ron  platform.ron  power_cable.ron  power_cell.ron  provisioning_module.ron  (+29 more)
assets/layers/: deep.ron  shallow.ron
assets/machines/: advanced_assembler.ron  analysis_station.ron  assembler.ron  combustion_generator.ron  crusher.ron  fluxite_generator.ron  gateway.ron  generator.ron  launch_site.ron  miner.ron  plate_roller.ron  refinery.ron  smelter.ron  solar_generator.ron  storage_crate.ron  washer.ron  wire_drawer.ron
assets/materials/: aluminum.ron  bronze.ron  circuit_board.ron  coal.ron  copper.ron  copper_ingot.ron  copper_wire.ron  cryophase.ron  fluxite.ron  gateway_key.ron  iron.ron  iron_ingot.ron  power_cell.ron  raw_copper.ron  raw_iron.ron  research_points.ron  resonite.ron  resonite_circuit.ron  steel.ron  stone.ron  tin.ron  titanium.ron  xalite.ron  xalite_shard.ron
assets/placeables/: logistics_cable.ron  platform.ron  power_cable.ron
assets/recipe_templates/: draw_metal.ron  smelt_metal.ron
assets/recipes/: activate_gateway.ron  alloy_bronze.ron  alloy_steel.ron  analyze_bronze_gear.ron  analyze_circuit.ron  analyze_exotic_reaction.ron  analyze_field_sample.ron  analyze_silicon_chip.ron  basic_analysis.ron  combust_coal.ron  crush_aluminum.ron  crush_copper.ron  crush_iron.ron  crush_stone.ron  crush_tin.ron  draw_copper.ron  forge_gateway_key.ron  form_gear_bronze.ron  form_resonite_lattice.ron  form_silicon_chip.ron  generate_fluxite.ron  gravel_filler.ron  launch_minimal_successor.ron  launch_successor.ron  logistics_cable_craft.ron  make_advanced_assembler.ron  make_analysis_station.ron  make_assembler.ron  make_assembler_kit.ron  make_carbothermal_bed.ron  make_circuit.ron  make_combustion_generator.ron  make_crusher.ron  make_cryogenic_bed.ron  make_fluxite_coil.ron  make_fluxite_generator.ron  make_generator_kit.ron  make_launch_site.ron  make_launch_site__minimal.ron  make_miner.ron  (+42 more)
assets/seeds/: curated.ron
assets/tech_nodes/: advanced_assembler.ron  advanced_processing.ron  alien_materials.ron  aluminum_extraction.ron  (+43 more)
crates/assets/: Cargo.toml
crates/assets/src/: main.rs
crates/scenario-runner/: Cargo.toml
crates/scenario-runner/src/: balance.rs  harness.rs  lib.rs  main.rs  report.rs  smoke.rs  spec.rs
docs/: README.md  balance-state.md  balance.md  contributing-content.md  design-decisions.md  design-todos.md  escape-condition.md  gdd.md  implementation-plan.md  milestones.md  mining.md  networks.md  research.md  standard-run-design.md  tasks.md  tech-tree-design.md  technical-design.md  ui.md  vertical_slice.md
scenarios/: initiation.ron  standard.ron
scripts/: gen_block_textures.py  gen_dev_assets.py  next_voxel_id.sh
src/: lib.rs  main.rs  textures.rs
tests/: assembler_recipe.rs  asset_roundtrip.rs  bootstrap_to_research.rs  content_lint.rs  curated_seeds.rs  initiation_run.rs  landing_to_first_research.rs  save_round_trip.rs  smelter_recipe.rs  smoke_reach.rs  standard_full_run.rs
ui_mock/: autocraft.jsx  craft-modal.jsx  design-canvas.jsx  hotbar.jsx  hud-wireframes.html  hud.jsx  index.html  integrated.jsx  inventory-wireframes.html  inventory.jsx  lookup.jsx  machine-wireframes.html  machine.jsx  menu-wireframes.html  menu.jsx  planner-wireframes.html  planner.jsx  tech-tree-v6.jsx  tech-tree-wireframes.html  tech-tree.jsx  theme-samples.html  theme.css  tweaks-panel.jsx  wireframe.css
(+138 files in other folders)
