[package]
name = "exergon"
version = "0.1.0"
edition = "2024"
default-run = "exergon"

[dependencies]
bevy = { version = "0.19", features = ["dynamic_linking"] }
avian3d = "0.7"
bevy-tnua = "0.32"
bevy-tnua-avian3d = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
moonshine-save = "0.7.0"
base58 = "0.2"
blake3 = "1"
rand = "0.8"
rand_pcg = "0.3"
noise = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
dead_code = "allow" # TEMP until MVP

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
