[package]
name = "exergon-assets"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "assets"
path = "src/main.rs"

[dependencies]
exergon = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rmcp = { version = "0.9", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = { version = "2.0.1", features = ["serde"] }

[lints]
workspace = true
